@@ -253,7 +253,7 @@ struct ClassTraits<Herwig::Evolver>: public ClassTraitsBase<Herwig::Evolver> {
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "libHwShower.so"; }
+  static string library() { return "HwShower.so"; }
 
 };
 
