@@ -1,3 +1,25 @@
-pkglib_LTLIBRARIES = libHwShower.la
-libHwShower_la_SOURCES = \
-BackwardEvolver.cc BackwardEvolver.h BackwardEvolver.icc Evolver.cc Evolver.h Evolver.icc ForwardEvolver.cc ForwardEvolver.h ForwardEvolver.icc FS_QtildaShowerKinematics1to2.cc FS_QtildaShowerKinematics1to2.h FS_QtildaShowerKinematics1to2.icc GtoGGSplitFn.cc GtoGGSplitFn.h GtoQQbarSplitFn.cc GtoQQbarSplitFn.h IS_QtildaShowerKinematics1to2.cc IS_QtildaShowerKinematics1to2.h IS_QtildaShowerKinematics1to2.icc KinematicsReconstructor.cc KinematicsReconstructor.h KinematicsReconstructor.icc PartnerFinder.cc PartnerFinder.h PartnerFinder.icc QQbarG.cc QQbarG.h QtildaShowerKinematics1to2.cc QtildaShowerKinematics1to2.h QtildaShowerKinematics1to2.icc QtoGQSplitFn.cc QtoGQSplitFn.h QtoQGammaSplitFn.cc QtoQGammaSplitFn.h QtoQGSplitFn.cc QtoQGSplitFn.h ShowerAlpha.cc ShowerAlpha.h ShowerAlpha.icc ShowerAlphaQCD.cc ShowerAlphaQCD.h ShowerAlphaQCD.icc ShowerAlphaQED.cc ShowerAlphaQED.h ShowerAlphaQED.icc ShowerConfig.h ShowerHandler.cc ShowerHandler.h ShowerHandler.icc ShowerIndex.cc ShowerIndex.h ShowerKinematics.cc ShowerKinematics.h ShowerKinematics.icc ShowerParticle.cc ShowerParticle.h ShowerParticle.icc ShowerVariables.cc ShowerVariables.h ShowerVariables.icc SplittingFunction.h SplittingGenerator.cc SplittingGenerator.h SplittingGenerator.icc SudakovFormFactor.cc SudakovFormFactor.h
+pkglib_LTLIBRARIES = HwShower.la
+HwShower_la_LDFLAGS = -module
+HwShower_la_SOURCES = \
+BackwardEvolver.cc BackwardEvolver.h BackwardEvolver.icc \
+Evolver.cc Evolver.h Evolver.icc \
+ForwardEvolver.cc ForwardEvolver.h ForwardEvolver.icc \
+FS_QtildaShowerKinematics1to2.cc FS_QtildaShowerKinematics1to2.h \
+FS_QtildaShowerKinematics1to2.icc \
+GtoGGSplitFn.cc GtoGGSplitFn.h GtoQQbarSplitFn.cc GtoQQbarSplitFn.h \
+IS_QtildaShowerKinematics1to2.cc IS_QtildaShowerKinematics1to2.h \
+IS_QtildaShowerKinematics1to2.icc \
+KinematicsReconstructor.cc KinematicsReconstructor.h KinematicsReconstructor.icc \
+PartnerFinder.cc PartnerFinder.h PartnerFinder.icc \
+QQbarG.cc QQbarG.h \
+QtildaShowerKinematics1to2.cc QtildaShowerKinematics1to2.h QtildaShowerKinematics1to2.icc \
+QtoGQSplitFn.cc QtoGQSplitFn.h QtoQGammaSplitFn.cc QtoQGammaSplitFn.h QtoQGSplitFn.cc QtoQGSplitFn.h \
+ShowerAlpha.cc ShowerAlpha.h ShowerAlpha.icc \
+ShowerAlphaQCD.cc ShowerAlphaQCD.h ShowerAlphaQCD.icc \
+ShowerAlphaQED.cc ShowerAlphaQED.h ShowerAlphaQED.icc \
+ShowerConfig.h ShowerHandler.cc ShowerHandler.h ShowerHandler.icc \
+ShowerIndex.cc ShowerIndex.h ShowerKinematics.cc ShowerKinematics.h \
+ShowerKinematics.icc ShowerParticle.cc ShowerParticle.h ShowerParticle.icc \
+ShowerVariables.cc ShowerVariables.h ShowerVariables.icc SplittingFunction.h \
+SplittingGenerator.cc SplittingGenerator.h SplittingGenerator.icc \
+SudakovFormFactor.cc SudakovFormFactor.h
