@@ -115,7 +115,7 @@ struct ClassTraits<Herwig::QtoGQSplitFn>
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "libHwShower.so"; }
+  static string library() { return "HwShower.so"; }
 
 };
 
