@@ -154,7 +154,7 @@ struct ClassTraits<Herwig::ShowerAlpha>: public ClassTraitsBase<Herwig::ShowerAl
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "libHwShower.so"; }
+  static string library() { return "HwShower.so"; }
 };
 
 }
