@@ -192,7 +192,7 @@ struct ClassTraits<Herwig::ShowerHandler>: public ClassTraitsBase<Herwig::Shower
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "libHwShower.so"; }
+  static string library() { return "HwShower.so"; }
 };
 
 }
