@@ -305,7 +305,7 @@ struct ClassTraits<Herwig::SplittingGenerator>: public ClassTraitsBase<Herwig::S
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "libHwShower.so"; }
+  static string library() { return "HwShower.so"; }
 };
 
 }
