@@ -1,2 +1,3 @@
-pkglib_LTLIBRARIES = libUA5.la
-libUA5_la_SOURCES = UA5.cc  UA5.h
+pkglib_LTLIBRARIES = HwUA5.la
+HwUA5_la_SOURCES = UA5.cc  UA5.h
+HwUA5_la_LDFLAGS= -module
