@@ -1,7 +1,6 @@
 cd /Defaults/Handlers/UnderlyingEvent
 #
-library libUA5.so
-create Herwig++::UA5Handler theUA5
+create Herwig++::UA5Handler theUA5 HwUA5.so
 #
 set theUA5:GlobalParameters /Defaults/theGlobalParameters
 set theUA5:ClusterFissioner /Defaults/Handlers/Hadronization/Cluster/theClusterFissioner
